@@ -509,20 +509,12 @@
 #define WTF_USE_PTHREAD_BASED_QT 1
 #endif
 
-/* FIXME: JSC multithreading currently only supports pthread.
-   Qt-Win cannot do multithreading because it is not pthread-based. */
 #if !defined(ENABLE_JSC_MULTIPLE_THREADS)
-#if !PLATFORM(QT) || USE(PTHREAD_BASED_QT)
 #define ENABLE_JSC_MULTIPLE_THREADS 1
 #endif
-#endif
 
-/* FIXME: JSC multithreading currently only supports pthread.
-   Qt-Win cannot do multithreading because it is not pthread-based. */
 #if !defined(ENABLE_WTF_MULTIPLE_THREADS)
-#if !PLATFORM(QT) || USE(PTHREAD_BASED_QT)
 #define ENABLE_WTF_MULTIPLE_THREADS 1
-#endif
 #endif
 
 /* On Windows, use QueryPerformanceCounter by default */
